[package]
name = "mini_os"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort" # Disable stack unwinding

[profile.release]
panic = "abort" # Disable stack unwinding

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.23"

[[bin]]
path = "src/main.rs"
name = "mini_os"
test = false
